--- a/css/style.scss
+++ b/css/style.scss
@@ -54,6 +54,48 @@ body {
 	justify-content: space-between;
 }
 
+.sp {
+	display: none;
+}
+
+
+/*--------------------
+位置の設定　grid
+---------------------*/
+.pc_row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -20px;
+  //padding部分にホバーが効かないようにする
+  pointer-events: none;
+}
+
+.pc_col1 {
+  padding-top: 30px;
+  padding-left: 20px;
+  width: 20%;
+}
+
+.pc_col2 {
+  padding-top: 30px;
+  padding-left: 20px;
+  width: 58%;
+}
+
+.pc_col3 {
+  padding-top: 30px;
+  padding-left: 20px;
+  width: 20%;
+}
+
+
+.pc_col1 > *,
+.pc_col2 > *,
+.pc_col3 > *{
+  //colの下の要素にはホバーをさせたいのでpointer-eventsを元に戻す
+  pointer-events: auto;
+} 
 /*-------------------
 header
 --------------------*/
@@ -92,12 +134,11 @@ main {
     background-image: -moz-linear-gradient(180deg,rgba(15,131,208,1.00) 0%,rgba(0,1,130,1.00) 100%);
     background-image: -o-linear-gradient(180deg,rgba(15,131,208,1.00) 0%,rgba(0,1,130,1.00) 100%);
     background-image: linear-gradient(270deg,rgba(15,131,208,1.00) 0.00%,rgba(0,1,130,1.00) 100%);
-	
-	
 	justify-content: space-between;
 	align-items: center;
-	margin-top: 5px;
-	margin-bottom: 10px;
+	margin-top: 2px;
+	margin-bottom: 5px;
+  box-shadow: 0 0 4px inset #353F5A;
 	
 	h2 {
 		color: white;
@@ -107,7 +148,7 @@ main {
 	
 	img {
 		margin: 5px 10px;
-		max-height: 3.5rem;
+		max-height: 2.5rem;
 		width: auto;
 	}
 }
@@ -128,11 +169,7 @@ article {
 section　中身
 ----------------------*/
 
-section h3 {
-	font-size: 1.5rem;
-	padding: 10px 15px;
-  margin-top: 8px;
-}
+
 
 .nakami {
 	height: 60vh;
@@ -140,7 +177,14 @@ section h3 {
 	background: #ccc;
   overflow-y: scroll;
 
-
+  h3 {
+    font-size: 1.5rem;
+    padding: 10px 15px;
+    background: #E1DBDC;
+    box-shadow: 0 0 4px inset #999999;
+    
+  }
+  
 	p {
 		padding: 10px 15px;
 	}
@@ -238,7 +282,7 @@ ul.gmenu ul {
   display: none;
 }
 
-ul.gmenu > li:hover ul {
+ul.gmenu > li:hover ul.oomaka {
   display: block;
   height: auto;
   position: absolute;
@@ -294,17 +338,27 @@ ul.gmenu .oomaka li:hover {
 }
 
 
+/*----------------------------
+gallery
+-------------------------------*/
 
-
-
-
-
-	
-.sp {
-	display: none
+.container {
+  margin: 0 auto;
+  padding: 40px;
+  width: 80%;
 }
-	
-	
+
+.slick-slide {
+  text-align: center;
+}
+
+
+
+
+
+
+
+
 @media (max-width: 420px) {
 	
 	.pc {
@@ -340,9 +394,6 @@ ul.gmenu .oomaka li:hover {
 		}	
 	}
 	
-	.sp_main_img {
-		margin-top: 15px;
-	}
 	
 	.sp_footer{
 		height: 165px;
@@ -370,38 +421,56 @@ ul.gmenu .oomaka li:hover {
 		.img_daimaru {
 			max-width: 155px;
 			position: absolute;
-			top: 7px;
-			left: 30%;
+			top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
 		}
 		
 		.img_maru {
 			position: absolute;
-			top: 35%;
-			left: 43%;
+			top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
 		}
 		
 		.img_migi {
 			position: absolute;
-			top: 36%;
-			right: 30%;
+      top: 0;
+      bottom: 0;
+      left: 24%;
+      right: 0;
+      margin: auto;
 		}
 		
 		.img_hidari {
 			position: absolute;
-			top: 36%;
-			left: 29%;
+			top: 0;
+      bottom: 0;
+      left: 0;
+      right: 24%;
+      margin: auto;
 		}
 		
 		.img_ue{
 			position: absolute;
-			top: 8%;
-			left: 43%;
+			top: 0;
+      bottom: 62%;
+      left: 0;
+      right: 0;
+      margin: auto;
 		}
 		
 		.img_sita {
 			position: absolute;
-			bottom: 3%;
-			left: 43%;
+			top: 62%;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
 		}
 	}/*---sp_footer---*/
 	
@@ -439,13 +508,46 @@ ul.gmenu .oomaka li:hover {
   pointer-events: none;
 }
 
-.col {
-  padding-top: 20px;
-  padding-left: 5px;
-  width: 33.3333%;
+  .col {
+    padding-top: 10px;
+    padding-left: 5px;
+    width: 33.3333%;
+  }
+  .col > * {
+  //colの下の要素にはホバーをさせたいのでpointer-eventsを元に戻す
+  pointer-events: auto;
+} 
+  
+  .spmenujs {
+    margin-top: 15px;
+    padding: 15px 0 0 15px;
+  }
+	
+  
+  /*-----------------
+  
+  ------------------*/
+  .pc_row {
+    display: block;
+  }
+  
+  .pc_col1 {
+  width: 100%;
+}
+
+.pc_col2 {
+  width: 100%;
+}
+
+.pc_col3 {
+  width: 100%;
 }
   
-	
+  
+  
+  
+  
+  
 }/*--media--*/
 	
 	
