--- a/css/style.scss
+++ b/css/style.scss
@@ -341,7 +341,7 @@ ul.gmenu .oomaka li:hover {
 /*----------------------------
 gallery
 -------------------------------*/
-
+/*
 .container {
   margin: 0 auto;
   padding: 40px;
@@ -351,6 +351,30 @@ gallery
 .slick-slide {
   text-align: center;
 }
+
+.slick-prev{
+	
+}
+
+
+
+
+.single-item {
+	display: flex;
+	justify-content: space-between;
+	
+}
+
+.slick-dots {
+	display: flex;
+}
+*/
+
+
+
+
+
+
 
 
 
